--- a/app/login/Login.module.css
+++ b/app/login/Login.module.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #f5f6fa;
+  background: #5e5c57;
 }
 
 .loginForm {
@@ -11,39 +11,40 @@
   flex-direction: column;
   gap: 1rem;
   padding: 2.5rem 2rem;
-  border: 1px solid #e0e0e0;
+  border: 2px solid black;
   border-radius: 12px;
   min-width: 340px;
-  background: #fff;
-  box-shadow: 0 4px 24px rgba(0,0,0,0.08);
+  background: #f2f3f1;
+  box-shadow: 0 4px 24px rgba(0, 0, 0, 0.362);
 }
 
 .formHeader {
-  color: #222;
+  color: black;
   margin-bottom: 1rem;
 }
 
 .formLable {
-  color: #555;
+  color: black;
   font-weight: 500; 
 }
 
 .formInput {
-  background: #fafbfc;
-  color: #222;
+  background: white;
+  color: black;
   font-size: 1rem;
   width: 100%;
   padding: 0.6rem;
   margin-top: 0.25rem;
-  border: 1px solid #ccc;
+  border: 1px solid black;
   border-radius: 6px;
 }
 
 .loginBtn {
   padding: 0.7rem;
   font-weight: bold;
-  background: #0070f3;
-  color: #fff;
+  background: #a6343b;
+  border: 1px solid black;
+  color: white;
   border-radius: 6px;
   font-size: 1rem;
   cursor: pointer;
@@ -52,15 +53,15 @@
 }
 
 .loginBtn:hover {
-  background: #005ac0;
+  background: #75252a;
 }
 
 .signUpBtn {
   padding: 0.7rem;
   font-weight: bold;
-  background: #e0e0e0;
+  background: #cacbcb;
   color: #222;
-  border: none;
+  border: 1px solid black;
   border-radius: 6px;
   font-size: 1rem;
   cursor: pointer;
@@ -69,15 +70,15 @@
 }
 
 .signUpBtn:hover {
-  background: #bfbfbf;
+  background: #f2f3f1;
 }
 
 .googleBtn {
   padding: 0.7rem;
   font-weight: bold;
-  background: #fff;
-  color: #222;
-  border: 1px solid #ccc;
+  background: #f2f3f1;
+  color: black;
+  border: 1px solid black;
   border-radius: 6px;
   font-size: 1rem;
   cursor: pointer;
@@ -89,7 +90,7 @@
 }
 
 .googleBtn:hover {
-  background: #ececec;
+  background: #cacbcb;
 }
 
 .googleIcon {
