--- a/app/home/home.module.css
+++ b/app/home/home.module.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #a6343b;
+  background: #d2def9;
   border: 4px solid black;
   flex-direction: column;
 }
