--- a/app/styles/auth.module.css
+++ b/app/styles/auth.module.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #a6343b;
+  background: #d2def9;
   border: 4px solid black;
 }
 
@@ -14,7 +14,7 @@
   padding: 2.5rem 2rem;
   border: 4px solid black;
   width: 420px;
-  background: #f2f3f1;
+  background: #e9e9e7;
   box-shadow: 0 4px 24px rgba(0, 0, 0, 0.362);
 }
 
@@ -22,6 +22,12 @@
   color: black;
   margin-bottom: 1rem;
   font-size: xx-large;
+}
+
+.formSubHeader {
+  color: black;
+  font-size: small;
+  margin-bottom: -1rem;
 }
 
 .formLabel {
@@ -35,53 +41,48 @@
   font-size: 1rem;
   width: 100%;
   padding: 0.6rem;
-  margin-top: 0.25rem;
   border: 2px solid black;
 }
 
 .primaryBtn {
   padding: 0.7rem;
   font-weight: bold;
-  background: #949391;
+  background: #526fae;
   border: 2px solid black;
-  color: black;
+  color: white;
   font-size: 1rem;
   cursor: pointer;
-  margin-top: 0.5rem;
   transition: background 0.2s;
 }
 
 .primaryBtn:hover {
-  background: #75252a;
-  color: white;
+  background: #739cf3;
 }
 
 .secondaryBtn {
   padding: 0.7rem;
   font-weight: bold;
-  background: #cacbcb;
+  background: white;
   color: #222;
   border: 2px solid black;
   font-size: 1rem;
   cursor: pointer;
-  margin-top: 0.5rem;
   transition: background 0.2s;
 }
 
 .secondaryBtn:hover {
-  background-color: #75252a;
+  background-color: #acb2c3;
   color: white;
 }
 
 .googleBtn {
   padding: 0.7rem;
   font-weight: bold;
-  background: #f2f3f1;
+  background: white;
   color: black;
   border: 2px solid black;
   font-size: 1rem;
   cursor: pointer;
-  margin-top: 0.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -89,7 +90,7 @@
 }
 
 .googleBtn:hover {
-  background: #75252a;
+  background-color: #acb2c3;
   color: white;
 }
 
