--- a/app/globals.css
+++ b/app/globals.css
@@ -14,12 +14,24 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    /* --background: #23221f;
-    --foreground: #cacbcb; */
     --background: #526fae;
     --foreground: white;
   }
 }
+
+.appShell {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+  overflow: hidden;
+}
+
+main {
+  flex: 1;
+  height: 100%;
+  overflow-y: auto;
+}
+
 
 body {
   background: var(--background);
