--- a/app/styles/navbar.module.css
+++ b/app/styles/navbar.module.css
@@ -1,17 +1,17 @@
 .navbar {
-  display: flex;
-  justify-content: space-between;
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 40px;
+  background: #d2def9;
   align-items: center;
   padding: 12px 18px;
-  background: #f7f7f7;
-  border-left: 4px solid black;
-  border-top: 4px solid black;
-  border-bottom: 4px solid black;
+  justify-content: space-between;
+  border: 4px solid black;
+  display: flex;
   flex-direction: column;
-  height: 100vh;
-  width: 30px;
-  position: sticky;
-  top: 0; 
+  align-items: center;
 }
 
 .navLeft,
