--- a/app/styles/navbar.module.css
+++ b/app/styles/navbar.module.css
@@ -4,14 +4,12 @@
   top: 0;
   height: 100vh;
   width: 40px;
-  background: #d2def9;
   align-items: center;
   padding: 12px 18px;
   justify-content: space-between;
   border: 4px solid black;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .navLeft,
@@ -30,6 +28,6 @@
 }
 
 .icon:hover {
-  color: #a6343b;
+  color: white;
   transform: translateY(-2px);
 }
