--- a/app/styles/navbar.module.css
+++ b/app/styles/navbar.module.css
@@ -10,6 +10,8 @@
   border: 4px solid black;
   display: flex;
   flex-direction: column;
+  background: #526fae;
+  color: black;
 }
 
 .navLeft,
@@ -24,10 +26,11 @@
   font-size: 22px;
   cursor: pointer;
   transition: 0.2s ease;
-  color: black;
+  color: white;
 }
 
 .icon:hover {
   color: white;
   transform: translateY(-2px);
+  font-size: 25px;
 }
