--- a/app/styles/navbar.module.css
+++ b/app/styles/navbar.module.css
@@ -35,8 +35,9 @@
   font-size: 25px;
 }
 
-.icon:active {
-  color: #F2B76D;
-  transform: translateY(-2px);
+.icon.active {
+  color: #FFAA33;
   font-size: 25px;
+  transform: translateY(-2px);
+  position: relative;
 }
