--- a/app/styles/post.module.css
+++ b/app/styles/post.module.css
@@ -1,27 +1,90 @@
-.postContainer {}
+.postContainer {
+  display: flex;
+  flex-direction: column;
+  width: 600px;
+  height: 1200px;
+  border: solid 2px black;
+}
 
-.headerSection {}
+.headerSection {
+  height: 50px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px
+}
 
-.userName {}
+.userName {
+  font-size: small;
+}
 
-.profilePic {}
+.profilePic {
+  width: 30px;
+  height: 30px;
+  border-radius: 90;
+  margin-left: 10px;
+}
 
-.imageSection {}
+.imageSection {
+  position: relative; /* required for next/prev buttons */
+  width: 100%;
+}
 
-.postImage {}
+.postImage {
+  width: fit-content;
+  height: fit-content;
+}
 
-.nextImageButton {}
+.nextImageButton,
+.prevImageButton {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: rgba(255, 255, 255, 0.8);
+  border: none;
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: background 0.2s;
+}
 
-.prevImageButton {}
+.nextImageButton:hover,
+.prevImageButton:hover {
+  background: rgba(255, 255, 255, 1);
+}
 
-.likeCount {}
+.prevImageButton {
+  left: 10px;
+}
 
-.actionIcons {}
+.nextImageButton {
+  right: 10px;
+}
 
-.likeIcon {}
+.likeCount {
+  font-size: small;
+}
 
-.commentIcon {}
+.actionIcons {
+  display: flex;
+  flex-direction: row;
+}
 
-.saveIcon {}
+.icon {
+  font-size: small;
+  cursor: pointer;
+  transition: 0.2s ease;
+}
 
-.postDescription {}
+.icon:hover {
+  color: black;
+}
+
+.postDescription {
+  font-size: small;
+}
