--- a/app/styles/post.module.css
+++ b/app/styles/post.module.css
@@ -1,9 +1,11 @@
 .postContainer {
   display: flex;
   flex-direction: column;
-  width: 600px;
-  height: 1200px;
+  width: 500px;
+  max-height: 800px;
   border: solid 2px black;
+  background-color: rgb(232, 232, 232);
+  padding-bottom: 10px;
 }
 
 .headerSection {
@@ -24,11 +26,13 @@
   height: 30px;
   border-radius: 90;
   margin-left: 10px;
+  border: 0.5px solid black;
 }
 
 .imageSection {
   position: relative; /* required for next/prev buttons */
-  width: 100%;
+  max-width: 600px;
+  max-height: 900px;
 }
 
 .postImage {
@@ -68,11 +72,15 @@
 
 .likeCount {
   font-size: small;
+  margin-left: 10px;
+  margin-top: 10px;
 }
 
 .actionIcons {
   display: flex;
   flex-direction: row;
+  margin-left: 10px;
+  gap: 10px;
 }
 
 .icon {
@@ -87,4 +95,5 @@
 
 .postDescription {
   font-size: small;
+  margin-left: 10px;
 }
