--- a/app/styles/navbar.module.css
+++ b/app/styles/navbar.module.css
@@ -3,7 +3,7 @@
   left: 0;
   top: 0;
   height: 100vh;
-  width: 40px;
+  width: 70px;
   align-items: center;
   padding: 12px 18px;
   justify-content: space-between;
@@ -22,22 +22,34 @@
   gap: 18px;
 }
 
-.icon {
-  font-size: 22px;
+.iconWrapper:hover {
+  background-color: #1244b1;
+  transform: translateY(-2px);
+}
+
+.iconWrapper:hover .icon {
+  font-size: 25px;
+}
+
+.iconWrapper.active {
+  background-color: white;
+}
+
+.iconWrapper.active .icon {
+  color: #526fae;
+}
+
+.iconWrapper {
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
-  transition: 0.2s ease;
+}
+
+.icon {
+  font-size: 25px;
   color: white;
-}
-
-.icon:hover {
-  color: #FFAA33;
-  transform: translateY(-2px);
-  font-size: 25px;
-}
-
-.icon.active {
-  color: #FFAA33;
-  font-size: 25px;
-  transform: translateY(-2px);
-  position: relative;
+  transition: 0.2s ease;
 }
