--- a/app/styles/navbar.module.css
+++ b/app/styles/navbar.module.css
@@ -7,7 +7,9 @@
   align-items: center;
   padding: 12px 18px;
   justify-content: space-between;
-  border: 4px solid black;
+  border-left: 4px solid black;
+  border-top: 4px solid black;
+  border-bottom: 4px solid black;
   display: flex;
   flex-direction: column;
   background: #526fae;
@@ -41,8 +43,8 @@
 }
 
 .iconWrapper {
-  width: 60px;
-  height: 60px;
+  width: 66px;
+  height: 66px;
   display: flex;
   align-items: center;
   justify-content: center;
