working at about 99% of the way

--- a/components/CreatePostModal/CreatePostModal.module.css
+++ b/components/CreatePostModal/CreatePostModal.module.css
@@ -90,3 +90,10 @@
   text-align: center;
   white-space: pre-line;
 }
+
+.successMessage {
+  color: green;
+  font-weight: bold;
+  text-align: center;
+  font-size: large;
+}
